--- a/Cadastro de loja/cadastro_cliente.html
+++ b/Cadastro de loja/cadastro_cliente.html
@@ -78,6 +78,8 @@
                     <input type="password" name="confsenha" placeholder="Digite sua Senha Novamente">
                     <p>Sua senha deve ter no minimo 8 caracteres</p>
                 </fieldset>
+                <input type="checkbox" name="politica"><label for="">Eu concordo com as <a href="https://github.com/MatheusBarros07">políticas</a> de confiabilidade deste site?</label> <br>
+                <input type="radio"><label for="ofertas">Quero receber ofertas e novidades por SMS e E-mail</label> <br>
                 <input type="submit" name="cadastrar" value="Cadastrar">
             </form>
         </div>
