--- a/Cadastro de loja/cadastro_cliente.html
+++ b/Cadastro de loja/cadastro_cliente.html
@@ -14,11 +14,12 @@
             <img src="logo-removebg-preview (1).png">
             <h1>Bem vindo! É uma satisfação ter você como nosso mais novo cliente</h1>
             <form action="http://127.0.0.1:5500/Estudo%20de%20casos/Cadastro%20de%20loja/login_cliente.html">
-                <fieldset>
+                <fieldset class="dados">
                     <legend>Preencha seus dados pessoais</legend>
                     <input type="text" name="nome" placeholder="Digite seu nome completo" autofocus title="Digite seu nome completo" required>
                     <input type="text" name="cpf" placeholder="Digite seu cpf com pontos e traço" pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" title="Digite o CPF no formato nnn.nnn.nnn-nn" required>
                     <input type="text" name="rg" placeholder="Digite seu RG com traço" title="Digite o RG no formato nnnnnnnnn-nn" required>
+                    <input type="date" name="data_nascimento" placeholder="data nascimento" title="Digite sua data de nascimento">
                     <input type="text" name="ocupacao" placeholder="Ocupação" title="DIgite sua ocupação">
                     <select name="religião">
                         <option value="religião" selected title="Selecione sua relião">Religião</option>
@@ -29,7 +30,7 @@
                         <option value="naoresponder">Não responder</option>                      
                     </select>                   
                 </fieldset>
-                <fieldset>
+                <fieldset class="endereço">
                     <legend>Digite seu endereço completo</legend>
                     <input type="text" placeholder="Digite sua Avenida ou Rua" name="rua">
                     <input type="text" placeholder="Digite o Número">
@@ -67,20 +68,23 @@
                     <input type="text" placeholder="Digite o CEP com Traço" title="Digite o CEP no formato nnnnn-nnn">
                     <input type="text" name="complemento" placeholder="Complemento">
                 </fieldset>
-                <fieldset>
+                <fieldset class="contato">
                     <legend>Informações de contato</legend>
                     <input type="text" name="telefone" placeholder="Digite seu telefone com DDD" title="DIgite seu telefone no formato (xx)9nnnn-nnnn">
                     <input type="email" placeholder="Digite seu E-mail" required title="Digite seu E-mail">
                 </fieldset>
-                <fieldset>
+                <fieldset class="senha">
                     <legend>Criar Senha</legend>
-                    <input type="password" name="senha" placeholder="Digite sua Senha">
-                    <input type="password" name="confsenha" placeholder="Digite sua Senha Novamente">
-                    <p>Sua senha deve ter no minimo 8 caracteres</p>
+                    <input type="password" name="senha" placeholder="Digite sua Senha" class="senha2">
+                    <input type="password" name="confsenha" placeholder="Digite sua Senha Novamente" class="confsenha2"> <br>
+                    <p class="suasenha">Sua senha deve ter no minimo 8 caracteres</p>
                 </fieldset>
-                <input type="checkbox" name="politica"><label for="">Eu concordo com as <a href="https://github.com/MatheusBarros07">políticas</a> de confiabilidade deste site?</label> <br>
-                <input type="radio"><label for="ofertas">Quero receber ofertas e novidades por SMS e E-mail</label> <br>
-                <input type="submit" name="cadastrar" value="Cadastrar">
+                <fieldset class="confirmações">
+                    <legend>Confirmações</legend>
+                    <input type="checkbox" name="politica"><label for="">Eu concordo com as <a href="https://github.com/MatheusBarros07">políticas</a> de confiabilidade deste site?</label> <br>
+                    <input type="radio"><label for="ofertas">Quero receber ofertas e novidades por SMS e E-mail</label> <br>
+                </fieldset>
+                <input type="submit" name="cadastrar" value="Cadastrar" class="cadastrar">
             </form>
         </div>
     </section>
